--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,6 +8,6 @@
     <link rel="stylesheet" href="public/css/style1.css" type="text/css">
 </head>
 <body>
-   <h1>Hello World</h1> 
+   <h1>This is my homepage</h1> 
 </body>
 </html>
