--- a/views/adminIndexPage.ejs
+++ b/views/adminIndexPage.ejs
@@ -4,10 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="public/css/404style.css">
-    <title>Error 404</title>
+    <title>Administrator Index</title>
 </head>
 <body>
-    <h1>Oooopss.. Look like the page you are looking for is not found!</h1>  
+    <h1>Index Page for admin page</h1>
 </body>
 </html>
