--- a/views/trial.ejs
+++ b/views/trial.ejs
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Administrator Index</title>
+    <title>Flash Trial</title>
 </head>
 <body>
-    <h1>Index Page for admin page</h1>
+    <%= messages %> 
+    <h1>Trial for flash</h1>
 </body>
 </html>
