--- a/views/layout/fullnavBarBoilerplate.ejs
+++ b/views/layout/fullnavBarBoilerplate.ejs
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Boilerplate</title>
-    <script src="public/js/jquery.js"></script>
-    <link rel="stylesheet" href="public/css/bootstrap.min.css">
-    <script src="public/js/bootstrap.min.js"></script>
+    <script src="/js/jquery.js"></script>
+    <link rel="stylesheet" href="/css/bootstrap.min.css">
+    <script src="/js/bootstrap.min.js"></script>
 </head>
 <body>
     <%- include('../partials/navbarpartial') %> 
