--- a/views/authViews/registrationPage.ejs
+++ b/views/authViews/registrationPage.ejs
@@ -10,7 +10,7 @@
       <input type="password" class="form-control" id="inputPassword4" placeholder="Password">
     </div>
   </div>
-  <div class="form-group">
+  <!-- <div class="form-group">
     <label for="inputAddress">Address</label>
     <input type="text" class="form-control" id="inputAddress" placeholder="1234 Main St">
   </div>
@@ -42,6 +42,6 @@
         Check me out
       </label>
     </div>
-  </div>
+  </div> -->
   <button type="submit" class="btn btn-primary">Sign in</button>
 </form>
