--- a/views/authViews/registrationPage.ejs
+++ b/views/authViews/registrationPage.ejs
@@ -1,13 +1,17 @@
 <% layout('/layout/lessNavBarBoilerplate') %>
-<form>
+<form method="post" action="/auth/register">
   <div class="form-row">
     <div class="form-group col-md-6">
+      <label for="regCode4">Registration Code</label>
+      <input type="text" class="form-control" id="regCode4" placeholder="Code" name="regCode">
+    </div>
+    <div class="form-group col-md-6">
       <label for="inputEmail4">Email</label>
-      <input type="email" class="form-control" id="inputEmail4" placeholder="Email">
+      <input type="email" class="form-control" id="inputEmail4" placeholder="Email" name="email">
     </div>
     <div class="form-group col-md-6">
       <label for="inputPassword4">Password</label>
-      <input type="password" class="form-control" id="inputPassword4" placeholder="Password">
+      <input type="password" class="form-control" id="inputPassword4" placeholder="Password" name="password">
     </div>
   </div>
   <!-- <div class="form-group">
@@ -17,7 +21,7 @@
   <div class="form-group">
     <label for="inputAddress2">Address 2</label>
     <input type="text" class="form-control" id="inputAddress2" placeholder="Apartment, studio, or floor">
-  </div>
+</div>
   <div class="form-row">
     <div class="form-group col-md-6">
       <label for="inputCity">City</label>
