--- a/views/layout/lessNavBarBoilerplate.ejs
+++ b/views/layout/lessNavBarBoilerplate.ejs
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Boilerplate</title>
     <script src="/js/jquery.js"></script>
+    <link rel="shortcut icon" href="#" />
     <link rel="stylesheet" href="/css/bootstrap.min.css">
     <script src="/js/bootstrap.min.js"></script>
 </head>
