--- a/views/authViews/registrationPage.ejs
+++ b/views/authViews/registrationPage.ejs
@@ -1,3 +1,6 @@
+<!--TODO: Add client side validation for password
+  it should match with the validation on the server side
+-->
 <% layout('/layout/lessNavBarBoilerplate') %>
 <form method="post" action="/auth/register">
   <div class="form-row">
@@ -14,38 +17,6 @@
       <input type="password" class="form-control" id="inputPassword4" placeholder="Password" name="password">
     </div>
   </div>
-  <!-- <div class="form-group">
-    <label for="inputAddress">Address</label>
-    <input type="text" class="form-control" id="inputAddress" placeholder="1234 Main St">
-  </div>
-  <div class="form-group">
-    <label for="inputAddress2">Address 2</label>
-    <input type="text" class="form-control" id="inputAddress2" placeholder="Apartment, studio, or floor">
-</div>
-  <div class="form-row">
-    <div class="form-group col-md-6">
-      <label for="inputCity">City</label>
-      <input type="text" class="form-control" id="inputCity">
-    </div>
-    <div class="form-group col-md-4">
-      <label for="inputState">State</label>
-      <select id="inputState" class="form-control">
-        <option selected>Choose...</option>
-        <option>...</option>
-      </select>
-    </div>
-    <div class="form-group col-md-2">
-      <label for="inputZip">Zip</label>
-      <input type="text" class="form-control" id="inputZip">
-    </div>
-  </div>
-  <div class="form-group">
-    <div class="form-check">
-      <input class="form-check-input" type="checkbox" id="gridCheck">
-      <label class="form-check-label" for="gridCheck">
-        Check me out
-      </label>
-    </div>
   </div> -->
   <button type="submit" class="btn btn-primary">Sign in</button>
 </form>
