--- a/views/partials/navbarpartial.ejs
+++ b/views/partials/navbarpartial.ejs
@@ -29,9 +29,11 @@
             <li><a class="dropdown-item" href="#">Something else here</a></li>
           </ul>
         </li>
-        <li class="nav-item">
-          <a class="nav-link disabled">Disabled</a>
-        </li>
+        <% if (employee.role_id === 1) { %>
+          <li class="nav-item">
+            <a class="nav-link active" href="/dashboard">Roles and Permissions</a>
+          </li>   
+        <% } %>
       </ul>
       <form class="d-flex" role="search">
         <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
