--- a/views/partials/navbarpartial.ejs
+++ b/views/partials/navbarpartial.ejs
@@ -31,7 +31,7 @@
         </li>
         <% if (employee.role_id === 1) { %>
           <li class="nav-item">
-            <a class="nav-link active" href="/dashboard">Roles and Permissions</a>
+            <a class="nav-link active" href="/dashboard/roles-permissions">Roles and Permissions</a>
           </li>   
         <% } %>
       </ul>
