--- a/views/authViews/registrationPage.ejs
+++ b/views/authViews/registrationPage.ejs
@@ -16,7 +16,11 @@
       <label for="inputPassword4">Password</label>
       <input type="password" class="form-control" id="inputPassword4" placeholder="Password" name="password">
     </div>
+    <div class="form-group col-md-6">
+      <label for="inputPassword4">Confirm Password</label>
+      <input type="password" class="form-control" id="inputPassword4" placeholder="Confirm Password" name="repeat_password">
+    </div>
   </div>
-  </div> -->
+  </div> 
   <button type="submit" class="btn btn-primary">Sign in</button>
 </form>
