--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,4 +1,4 @@
-<% layout('/layout/lessNavBarBoilerplate') %>
+<% layout('/layout/Boilerplate') %>
 <div class="container">
     <div class="row">
         <h1>Welcome</h1>
