Revert "Removed the lessnavbar partial and will use if statement in the template instead"
This reverts commit e4b78823831bf44481d3c56d0a11bdf997ffc923.

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,4 +1,4 @@
-<% layout('/layout/Boilerplate') %>
+<% layout('/layout/lessNavBarBoilerplate') %>
 <div class="container">
     <div class="row">
         <h1>Welcome</h1>
