--- a/views/authViews/loginPage.ejs
+++ b/views/authViews/loginPage.ejs
@@ -1,4 +1,4 @@
-<% layout('/layout/Boilerplate') %>
+<% layout('/layout/lessNavBarBoilerplate') %>
 <form method="post" action="/auth/login">
   <div class="form-group">
     <label for="exampleInputEmail1">Email address</label>
