--- a/views/authViews/registrationPage.ejs
+++ b/views/authViews/registrationPage.ejs
@@ -1,7 +1,7 @@
 <!--TODO: Add client side validation for password
   it should match with the validation on the server side
 -->
-<% layout('/layout/Boilerplate') %>
+<% layout('/layout/lessNavBarBoilerplate') %>
 <form method="post" action="/auth/register">
   <div class="form-row">
     <div class="form-group col-md-6">
