--- a/views/partials/lessNavBarPartial.ejs
+++ b/views/partials/lessNavBarPartial.ejs
@@ -5,7 +5,7 @@
 </style>
 <nav class="navbar navbar-expand-lg bg-light">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">WFM Software</a>
+    <a class="navbar-brand" href="#">WFM</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
