--- a/views/dashboardViews/rolesPermissionDashboard.ejs
+++ b/views/dashboardViews/rolesPermissionDashboard.ejs
@@ -1,1 +1,38 @@
 <% layout('/layout/fullNavBarBoilerplate') %>
+<div class="container">
+    <div class="mt-sm-4 row">
+        <div class="border border-secondary col-sm-4">
+            <h3>Roles and Permissions</h3>
+            <div>
+                <a href="/roles/">Assign Permission to Role</a>
+            </div>
+            <div>
+                <a href="/roles/">Revoke Permission to Role</a>
+            </div>
+        </div>
+        <div class="border border-secondary col-sm-4">
+            <h3>Roles</h3> 
+            <div>
+                <a href="/roles/">Create New Role</a>
+            </div>
+            <div>
+                <a href="/roles/">Update Role</a>
+            </div>
+            <div>
+                <a href="/roles/">Delete Role</a>
+            </div>
+        </div>
+        <div class="border border-secondary col-sm-4">
+            <h3>Permissions</h3>
+            <div>
+                <a href="/permission/">Create New Permission</a>
+            </div>
+            <div>
+                <a href="/permission/">Update Permission</a>
+            </div>
+            <div>
+                <a href="/permission/">Delete Permission</a>
+            </div>
+        </div>
+   </div> 
+</div>
