--- a/views/dashboardViews/rolesPermissionDashboard.ejs
+++ b/views/dashboardViews/rolesPermissionDashboard.ejs
@@ -1,7 +1,7 @@
 <% layout('/layout/fullNavBarBoilerplate') %>
 <div class="container">
     <div class="mt-sm-4 row">
-        <div class="border border-secondary col-sm-4">
+        <div class="border border-secondary col-sm-4 p-2">
             <h3>Roles and Permissions</h3>
             <div>
                 <a href="/roles/">Assign Permission to Role</a>
@@ -10,19 +10,19 @@
                 <a href="/roles/">Revoke Permission to Role</a>
             </div>
         </div>
-        <div class="border border-secondary col-sm-4">
+        <div class="border border-secondary col-sm-4 p-2">
             <h3>Roles</h3> 
             <div>
-                <a href="/roles/">Create New Role</a>
+                <a href="/roles/create-role">Create New Role</a>
             </div>
             <div>
-                <a href="/roles/">Update Role</a>
+                <a href="/roles/update-role">Update Role</a>
             </div>
             <div>
-                <a href="/roles/">Delete Role</a>
+                <a href="/roles/delete-role">Delete Role</a>
             </div>
         </div>
-        <div class="border border-secondary col-sm-4">
+        <div class="border border-secondary col-sm-4 p-2">
             <h3>Permissions</h3>
             <div>
                 <a href="/permission/">Create New Permission</a>
