--- a/views/dashboardViews/rolesPermissionDashboard.ejs
+++ b/views/dashboardViews/rolesPermissionDashboard.ejs
@@ -9,6 +9,9 @@
             <div>
                 <a href="/roles/">Revoke Permission to Role</a>
             </div>
+            <div>
+                <a href="/roles/">View Permissions Granted to a Role</a>
+            </div>
         </div>
         <div class="border border-secondary col-sm-4 p-2">
             <h3>Roles</h3> 
