Permission views, controller, routes, services. Done

--- a/views/dashboardViews/rolesPermissionDashboard.ejs
+++ b/views/dashboardViews/rolesPermissionDashboard.ejs
@@ -28,13 +28,13 @@
         <div class="border border-secondary col-sm-4 p-2">
             <h3>Permissions</h3>
             <div>
-                <a href="/permission/">Create New Permission</a>
+                <a href="/permissions/create-permission">Create New Permission</a>
             </div>
             <div>
-                <a href="/permission/">Update Permission</a>
+                <a href="/permissions/update-permission">Update Permission</a>
             </div>
             <div>
-                <a href="/permission/">Delete Permission</a>
+                <a href="/permissions/delete-permission">Delete Permission</a>
             </div>
         </div>
    </div> 
