--- a/views/roleAndPermissionViews/permissionViews/createPermissionView.ejs
+++ b/views/roleAndPermissionViews/permissionViews/createPermissionView.ejs
@@ -5,8 +5,8 @@
             <h2>Create New Permission</h2>
             <form action="/permissions" method="post">
                 <div class="form-group mt-3">
-                    <label for="newPermission">New Permission: </label>
-                    <input type="text" name="newPermission" id="newPermission">
+                    <label for="permission_name">New Permission: </label>
+                    <input type="text" name="permission_name" id="permission_name">
                 </div>
                 <div class="form-group mt-3">
                     <button class="btn btn-secondary btn-sm" type="submit">Submit</button>
