--- a/views/roleAndPermissionViews/permissionViews/deletePermissionView.ejs
+++ b/views/roleAndPermissionViews/permissionViews/deletePermissionView.ejs
@@ -4,7 +4,7 @@
         <div class="border border-secondary col-md-4 ms-2 mt-4 p-2">
             <h2>Delete a Role</h2>
             <form action="/permissions?_method=DELETE" method="post">
-                <select class="form-select" aria-label="Current roles" name="uuid">
+                <select class="form-select" aria-label="Current permission" name="uuid">
                     <option selected>Select Permission to Delete</option>
                     <% permissions.forEach(element => { %>
                         <option value="<%= element.uuid %>"><%= element.permission_name %></option>
