--- a/views/roleAndPermissionViews/permissionViews/updatePermissionView.ejs
+++ b/views/roleAndPermissionViews/permissionViews/updatePermissionView.ejs
@@ -5,15 +5,15 @@
         <div class="border border-secondary col-md-4 ms-2 mt-4 p-2">
             <h2>Update a Permission</h2>
             <form action="/permissions?_method=PUT" method="post">
-                <select class="form-select" aria-label="Current roles" onChange='document.getElementById("updatedPermission").value = getSelectedOption(this)' name="uuid">
+                <select class="form-select" aria-label="Current roles" onChange='document.getElementById("permission_name").value = getSelectedOption(this)' name="uuid">
                     <option selected>Select Permission to Update</option>
                     <% permissions.forEach(element => { %>
                         <option value="<%= element.uuid %>"><%= element.permission_name %></option>
                     <% }) %>
                   </select>
                 <div class="form-group mt-3">
-                    <label for="updatedPermission">Updated value: </label>
-                    <input type="text" name="updatedPermission" id="updatedPermission">
+                    <label for="permission_name">Updated value: </label>
+                    <input type="text" name="permission_name" id="permission_name">
                 </div>
                 <div class="form-group mt-3">
                     <button class="btn btn-secondary btn-sm" type="submit">Submit</button>
