--- a/views/roleAndPermissionViews/roleViews/createRoleView.ejs
+++ b/views/roleAndPermissionViews/roleViews/createRoleView.ejs
@@ -5,8 +5,8 @@
             <h2>Create New Role</h2>
             <form action="/roles" method="post">
                 <div class="form-group mt-3">
-                    <label for="newRole">New Role: </label>
-                    <input type="text" name="newRole" id="newRole">
+                    <label for="role_name">New Role: </label>
+                    <input type="text" name="role_name" id="role_name">
                 </div>
                 <div class="form-group mt-3">
                     <button class="btn btn-secondary btn-sm" type="submit">Submit</button>
