--- a/views/roleAndPermissionViews/roleViews/updateRoleView.ejs
+++ b/views/roleAndPermissionViews/roleViews/updateRoleView.ejs
@@ -4,19 +4,18 @@
         <div class="border border-secondary col-md-4 ms-2 mt-4 p-2">
             <h2>Update a Role</h2>
             <form action="/roles?_method=PUT" method="post">
-                <select class="form-select" aria-label="Current roles" onChange='document.getElementById("updatedRole").value = getSelectedOption(this)' name="uuid">
+                <select class="form-select" aria-label="Current roles" onChange='document.getElementById("role_name").value = getSelectedOption(this)' name="uuid">
                     <option selected>Select Role to Update</option>
                     <% roles.forEach(element => { %>
                         <option value="<%= element.uuid %>"><%= element.role_name %></option>
                     <% }) %>
                   </select>
                 <div class="form-group mt-3">
-                    <label for="updatedRole">Updated value: </label>
-                    <input type="text" name="updatedRole" id="updatedRole">
+                    <label for="role_name">Updated value: </label>
+                    <input type="text" name="role_name" id="role_name">
                 </div>
                 <div class="form-group mt-3">
                     <button class="btn btn-secondary btn-sm" type="submit">Submit</button>
-                    <button class="btn btn-secondary btn-sm" onClick="history.go(-1);" >Back</button>
                 </div>
             </form>
         </div>
