--- a/views/authViews/loginPage.ejs
+++ b/views/authViews/loginPage.ejs
@@ -1,17 +1,13 @@
 <% layout('/layout/lessNavBarBoilerplate') %>
 <form method="post" action="/auth/login">
-  <div class="form-group">
+  <div class="form-group col-md-3 ms-3">
     <label for="exampleInputEmail1">Email address</label>
     <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email" name="email">
     <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
   </div>
-  <div class="form-group">
+  <div class="form-group col-md-3 ms-3">
     <label for="exampleInputPassword1">Password</label>
     <input type="password" class="form-control" name="password" id="exampleInputPassword1" placeholder="Password">
   </div>
-  <div class="form-check">
-    <input type="checkbox" class="form-check-input" id="exampleCheck1">
-    <label class="form-check-label" for="exampleCheck1">Check me out</label>
-  </div>
-  <button type="submit" class="btn btn-primary">Submit</button>
+  <button type="submit" class="btn btn-primary ms-3 mt-3">Submit</button>
 </form>
