--- a/views/dashboardViews/rolesPermissionDashboard.ejs
+++ b/views/dashboardViews/rolesPermissionDashboard.ejs
@@ -4,13 +4,13 @@
         <div class="border border-secondary col-sm-4 p-2">
             <h3>Roles and Permissions</h3>
             <div>
-                <a href="/roles/">Assign Permission to Role</a>
+                <a href="/role-permissions/create-rolePermission">Assign Permission to Role</a>
             </div>
             <div>
-                <a href="/roles/">Revoke Permission to Role</a>
+                <a href="/role-permissions/delete-rolePermission">Revoke Permission to Role</a>
             </div>
             <div>
-                <a href="/roles/">View Permissions Granted to a Role</a>
+                <a href="/role-permissions/show-rolePermission">View Permissions Granted to a Role</a>
             </div>
         </div>
         <div class="border border-secondary col-sm-4 p-2">
