--- a/views/roleAndPermissionViews/permissionViews/updatePermissionView.ejs
+++ b/views/roleAndPermissionViews/permissionViews/updatePermissionView.ejs
@@ -1,5 +1,5 @@
 
-<% layout('/roleAndPermissionViews/rolePermissionLayout') %>
+<% layout('./roleAndPermissionViews/roleAndPermissionLayout') %>
 <div class="container-fluid">
     <div class="row">
         <div class="border border-secondary col-md-4 ms-2 mt-4 p-2">
