converted all snake case to camel case. All services will be exported by index inside the dir

--- a/views/dashboardViews/index.ejs
+++ b/views/dashboardViews/index.ejs
@@ -1,5 +1,5 @@
 <% layout('/layout/fullNavBarBoilerplate') %>
-<h1>hello <%- employee.first_name %></h1>
+<h1>hello <%- employee.firstName %></h1>
 
 <form method="get" action="/auth/signout">
   <button type="submit" class="btn btn-primary">Sign-out</button>
