--- a/views/partials/navbarpartial.ejs
+++ b/views/partials/navbarpartial.ejs
@@ -29,7 +29,7 @@
             <li><a class="dropdown-item" href="#">Something else here</a></li>
           </ul>
         </li>
-        <% if (employee.role_id === 1) { %>
+        <% if (employee.roleId === 1) { %>
           <li class="nav-item">
             <a class="nav-link active" href="/dashboard/roles-permissions">Roles and Permissions</a>
           </li>   
