--- a/views/roleAndPermissionViews/permissionViews/createPermissionView.ejs
+++ b/views/roleAndPermissionViews/permissionViews/createPermissionView.ejs
@@ -6,7 +6,7 @@
             <form action="/permissions" method="post">
                 <div class="form-group mt-3">
                     <label for="permission_name">New Permission: </label>
-                    <input type="text" name="permission_name" id="permission_name">
+                    <input type="text" name="permissionName" id="permission_name">
                 </div>
                 <div class="form-group mt-3">
                     <button class="btn btn-secondary btn-sm" type="submit">Submit</button>
