--- a/views/roleAndPermissionViews/permissionViews/deletePermissionView.ejs
+++ b/views/roleAndPermissionViews/permissionViews/deletePermissionView.ejs
@@ -7,7 +7,7 @@
                 <select class="form-select" aria-label="Current permission" name="uuid">
                     <option selected>Select Permission to Delete</option>
                     <% permissions.forEach(element => { %>
-                        <option value="<%= element.uuid %>"><%= element.permission_name %></option>
+                        <option value="<%= element.uuid %>"><%= element.permissionName %></option>
                     <% }) %>
                   </select>
                 <div class="form-group mt-3">
