--- a/views/roleAndPermissionViews/permissionViews/updatePermissionView.ejs
+++ b/views/roleAndPermissionViews/permissionViews/updatePermissionView.ejs
@@ -8,12 +8,12 @@
                 <select class="form-select" aria-label="Current roles" onChange='document.getElementById("permission_name").value = getSelectedOption(this)' name="uuid">
                     <option selected>Select Permission to Update</option>
                     <% permissions.forEach(element => { %>
-                        <option value="<%= element.uuid %>"><%= element.permission_name %></option>
+                        <option value="<%= element.uuid %>"><%= element.permissionName %></option>
                     <% }) %>
                   </select>
                 <div class="form-group mt-3">
                     <label for="permission_name">Updated value: </label>
-                    <input type="text" name="permission_name" id="permission_name">
+                    <input type="text" name="permissionName" id="permission_name">
                 </div>
                 <div class="form-group mt-3">
                     <button class="btn btn-secondary btn-sm" type="submit">Submit</button>
