--- a/views/roleAndPermissionViews/rolePermissionViews/deleteRolePermissionView.ejs
+++ b/views/roleAndPermissionViews/rolePermissionViews/deleteRolePermissionView.ejs
@@ -6,17 +6,17 @@
             <form action="/role-permissions?_method=DELETE" method="post">
                 <div class="form-group mt-3">
                     <label for="role_name">Role</label>
-                    <select class="form-select" aria-label="Current roles" name="role_uuid" id="role_name">
+                    <select class="form-select" aria-label="Current roles" name="roleUuid" id="role_name">
                         <option selected>Select Role</option>
                         <% roles.forEach(element => { %>
-                            <option value="<%= element.uuid %>"><%= element.role_name %></option>
+                            <option value="<%= element.uuid %>"><%= element.roleName %></option>
                         <% }) %>
                     </select>
                 </div>
                 
                 <div class="form-group mt-3">
                     <label for="permission_name">Permission</label>
-                    <select class="form-select" aria-label="Current roles" name="permission_uuid" id="permission_name">
+                    <select class="form-select" aria-label="Current roles" name="permissionUuid" id="permission_name">
                     </select>
                 </div>
                 <div class="form-group mt-3">
