--- a/views/roleAndPermissionViews/rolePermissionViews/viewRolePermissionView.ejs
+++ b/views/roleAndPermissionViews/rolePermissionViews/viewRolePermissionView.ejs
@@ -5,10 +5,10 @@
             <h2>Revoke Permission to a Role</h2>
                 <div class="form-group mt-3">
                     <label for="role_name">Role</label>
-                    <select class="form-select" aria-label="Current roles" name="role_uuid" id="role_name">
+                    <select class="form-select" aria-label="Current roles" name="roleUuid" id="role_name">
                         <option selected>Select Role</option>
                         <% roles.forEach(element => { %>
-                            <option value="<%= element.uuid %>"><%= element.role_name %></option>
+                            <option value="<%= element.uuid %>"><%= element.roleName %></option>
                         <% }) %>
                     </select>
                 </div>
