--- a/views/roleAndPermissionViews/roleViews/createRoleView.ejs
+++ b/views/roleAndPermissionViews/roleViews/createRoleView.ejs
@@ -6,7 +6,7 @@
             <form action="/roles" method="post">
                 <div class="form-group mt-3">
                     <label for="role_name">New Role: </label>
-                    <input type="text" name="role_name" id="role_name">
+                    <input type="text" name="roleName" id="role_name">
                 </div>
                 <div class="form-group mt-3">
                     <button class="btn btn-secondary btn-sm" type="submit">Submit</button>
