--- a/views/roleAndPermissionViews/roleViews/updateRoleView.ejs
+++ b/views/roleAndPermissionViews/roleViews/updateRoleView.ejs
@@ -7,12 +7,12 @@
                 <select class="form-select" aria-label="Current roles" onChange='document.getElementById("role_name").value = getSelectedOption(this)' name="uuid">
                     <option selected>Select Role to Update</option>
                     <% roles.forEach(element => { %>
-                        <option value="<%= element.uuid %>"><%= element.role_name %></option>
+                        <option value="<%= element.uuid %>"><%= element.roleName %></option>
                     <% }) %>
                   </select>
                 <div class="form-group mt-3">
                     <label for="role_name">Updated value: </label>
-                    <input type="text" name="role_name" id="role_name">
+                    <input type="text" name="roleName" id="role_name">
                 </div>
                 <div class="form-group mt-3">
                     <button class="btn btn-secondary btn-sm" type="submit">Submit</button>
