--- a/views/roleAndPermissionViews/permissionViews/deletePermissionView.ejs
+++ b/views/roleAndPermissionViews/permissionViews/deletePermissionView.ejs
@@ -2,7 +2,7 @@
 <div class="container-fluid">
     <div class="row">
         <div class="border border-secondary col-md-4 ms-2 mt-4 p-2">
-            <h2>Delete a Role</h2>
+            <h2>Delete a Permission</h2>
             <form action="/permissions?_method=DELETE" method="post">
                 <select class="form-select" aria-label="Current permission" name="uuid">
                     <option selected>Select Permission to Delete</option>
