--- a/views/roleAndPermissionViews/rolePermissionViews/viewRolePermissionView.ejs
+++ b/views/roleAndPermissionViews/rolePermissionViews/viewRolePermissionView.ejs
@@ -2,7 +2,7 @@
 <div class="container-fluid">
     <div class="row">
         <div class="border border-secondary col-md-4 ms-2 mt-4 p-2">
-            <h2>Revoke Permission to a Role</h2>
+            <h2>View Permission Granted to Role</h2>
                 <div class="form-group mt-3">
                     <label for="role_name">Role</label>
                     <select class="form-select" aria-label="Current roles" name="roleUuid" id="role_name">
