--- a/views/dashboardViews/departmentDashboard.ejs
+++ b/views/dashboardViews/departmentDashboard.ejs
@@ -1,5 +1,5 @@
 <% layout('/layout/fullNavBarBoilerplate') %>
-<div class="container-fluid ms-4">
+<div class="container ms-4">
     <div class="mt-sm-4 row">
         <div class="border border-secondary col-sm-4 p-2">
             <h3>Department Menu</h3>
