--- a/views/partials/navbarpartial.ejs
+++ b/views/partials/navbarpartial.ejs
@@ -26,7 +26,7 @@
           <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
             <li><a class="dropdown-item" href="/dashboard/roles-permissions">Roles and Permissions</a></li>
             <li><a class="dropdown-item" href="/dashboard/departments">Departments</a></li>
-            <li><a class="dropdown-item" href="#">Positions</a></li>
+            <li><a class="dropdown-item" href="/dashboard/positions">Positions</a></li>
           </ul>
         </li>
         <% } %>
