--- a/views/roleAndPermissionViews/roleViews/updateRoleView.ejs
+++ b/views/roleAndPermissionViews/roleViews/updateRoleView.ejs
@@ -4,15 +4,15 @@
         <div class="border border-secondary col-md-4 ms-2 mt-4 p-2">
             <h2>Update a Role</h2>
             <form action="/roles?_method=PUT" method="post" id="mainForm">
-                <select class="form-select" aria-label="Current roles" onChange='document.getElementById("role_name").value = getSelectedOption(this)' name="uuid">
+                <select class="form-select" aria-label="Current roles" onChange='document.getElementById("roleName").value = getSelectedOption(this)' name="uuid">
                     <option selected>Select Role to Update</option>
                     <% roles.forEach(element => { %>
                         <option value="<%= element.uuid %>"><%= element.roleName %></option>
                     <% }) %>
                   </select>
                 <div class="form-group mt-3">
-                    <label for="role_name">Updated value: </label>
-                    <input type="text" name="roleName" id="role_name">
+                    <label for="roleName">Updated value: </label>
+                    <input type="text" name="roleName" id="roleName">
                 </div>
                 <div class="form-group mt-3">
                     <button class="btn btn-secondary btn-sm" type="submit">Submit</button>
@@ -22,7 +22,7 @@
     </div>
 </div>
 <script>
-    function getSelectedOption(sel) {
+     function getSelectedOption(sel) {
         return sel.options[sel.selectedIndex].text;
     }   
 </script>
