Linting for views. Route refactoring. Dprmnt show page done

--- a/views/dashboardViews/departmentDashboard.ejs
+++ b/views/dashboardViews/departmentDashboard.ejs
@@ -1,17 +1,20 @@
 <% layout('/layout/fullNavBarBoilerplate') %>
-<div class="container ms-4">
-    <div class="mt-sm-4 row">
-        <div class="border border-secondary col-sm-4 p-2">
-            <h3>Department Menu</h3>
-            <div>
-                <a href="/departments/create-department">Create New Department</a>
-            </div>
-            <div>
-                <a href="/departments/update-department">Edit a Department</a>
-            </div>
-            <div>
-                <a href="/departments/delete-department">Delete Department</a>
+    <div class="container ms-4">
+        <div class="mt-sm-4 row">
+            <div class="border border-secondary col-sm-4 p-2">
+                <h3>Department Menu</h3>
+                <div>
+                    <a href="/departments/create-department">Create New Department</a>
+                </div>
+                <div>
+                    <a href="/departments/update-department">Edit a Department</a>
+                </div>
+                <div>
+                    <a href="/departments/delete-department">Delete Department</a>
+                </div>
+                <div>
+                    <a href="/departments/show-departments">View All Departments</a>
+                </div>
             </div>
         </div>
-   </div> 
-</div>
+    </div>
