--- a/views/authViews/loginPage.ejs
+++ b/views/authViews/loginPage.ejs
@@ -1,13 +1,14 @@
 <% layout('/layout/lessNavBarBoilerplate') %>
-<form method="post" action="/auth/login">
-  <div class="form-group col-md-3 ms-3">
-    <label for="exampleInputEmail1">Email address</label>
-    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email" name="email">
-    <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
-  </div>
-  <div class="form-group col-md-3 ms-3">
-    <label for="exampleInputPassword1">Password</label>
-    <input type="password" class="form-control" name="password" id="exampleInputPassword1" placeholder="Password">
-  </div>
-  <button type="submit" class="btn btn-primary ms-3 mt-3">Submit</button>
-</form>
+  <form method="post" action="/auth/login">
+    <div class="form-group col-md-3 ms-3">
+      <label for="exampleInputEmail1">Email address</label>
+      <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
+        placeholder="Enter email" name="email">
+      <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+    </div>
+    <div class="form-group col-md-3 ms-3">
+      <label for="exampleInputPassword1">Password</label>
+      <input type="password" class="form-control" name="password" id="exampleInputPassword1" placeholder="Password">
+    </div>
+    <button type="submit" class="btn btn-primary ms-3 mt-3">Submit</button>
+  </form>
