--- a/views/authViews/registrationPage.ejs
+++ b/views/authViews/registrationPage.ejs
@@ -2,25 +2,26 @@
   it should match with the validation on the server side
 -->
 <% layout('/layout/lessNavBarBoilerplate') %>
-<form method="post" action="/auth/register">
-  <div class="form-row">
-    <div class="form-group col-md-6">
-      <label for="regCode4">Registration Code</label>
-      <input type="text" class="form-control" id="regCode4" placeholder="Code" name="regCode">
+  <form method="post" action="/auth/register">
+    <div class="form-row">
+      <div class="form-group col-md-6">
+        <label for="regCode4">Registration Code</label>
+        <input type="text" class="form-control" id="regCode4" placeholder="Code" name="regCode">
+      </div>
+      <div class="form-group col-md-6">
+        <label for="inputEmail4">Email</label>
+        <input type="email" class="form-control" id="inputEmail4" placeholder="Email" name="email">
+      </div>
+      <div class="form-group col-md-6">
+        <label for="inputPassword4">Password</label>
+        <input type="password" class="form-control" id="inputPassword4" placeholder="Password" name="password">
+      </div>
+      <div class="form-group col-md-6">
+        <label for="inputPassword4">Confirm Password</label>
+        <input type="password" class="form-control" id="inputPassword4" placeholder="Confirm Password"
+          name="repeat_password">
+      </div>
     </div>
-    <div class="form-group col-md-6">
-      <label for="inputEmail4">Email</label>
-      <input type="email" class="form-control" id="inputEmail4" placeholder="Email" name="email">
     </div>
-    <div class="form-group col-md-6">
-      <label for="inputPassword4">Password</label>
-      <input type="password" class="form-control" id="inputPassword4" placeholder="Password" name="password">
-    </div>
-    <div class="form-group col-md-6">
-      <label for="inputPassword4">Confirm Password</label>
-      <input type="password" class="form-control" id="inputPassword4" placeholder="Confirm Password" name="repeat_password">
-    </div>
-  </div>
-  </div> 
-  <button type="submit" class="btn btn-primary">Sign in</button>
-</form>
+    <button type="submit" class="btn btn-primary">Sign in</button>
+  </form>
