--- a/views/dashboardViews/index.ejs
+++ b/views/dashboardViews/index.ejs
@@ -1,6 +1,7 @@
 <% layout('/layout/fullNavBarBoilerplate') %>
-<h1>hello <%- employee.firstName %></h1>
+  <h1>hello <%- employee.firstName %>
+  </h1>
 
-<form method="get" action="/auth/signout">
-  <button type="submit" class="btn btn-primary">Sign-out</button>
-</form>
+  <form method="get" action="/auth/signout">
+    <button type="submit" class="btn btn-primary">Sign-out</button>
+  </form>
