--- a/views/partials/navbarpartial.ejs
+++ b/views/partials/navbarpartial.ejs
@@ -1,13 +1,14 @@
 <style>
-  .navbar-toggler-icon{
+  .navbar-toggler-icon {
     background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='30' height='30' viewBox='0 0 30 30'%3e%3cpath stroke='rgba%280, 0, 0, 0.5%29' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
-}
+  }
 </style>
 
 <nav class="navbar navbar-expand-lg bg-light">
   <div class="container-fluid">
     <a class="navbar-brand" href="#">WFM</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+      aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -18,18 +19,19 @@
         <li class="nav-item">
           <a class="nav-link" href="#">Link</a>
         </li>
-        <% if (employee.roleId === 1) { %>
+        <% if (employee.roleId===1) { %>
           <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            Administrator
-          </a>
-          <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <li><a class="dropdown-item" href="/dashboard/roles-permissions">Roles and Permissions</a></li>
-            <li><a class="dropdown-item" href="/dashboard/departments">Departments</a></li>
-            <li><a class="dropdown-item" href="/dashboard/positions">Positions</a></li>
-          </ul>
-        </li>
-        <% } %>
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
+              aria-expanded="false">
+              Administrator
+            </a>
+            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <li><a class="dropdown-item" href="/dashboard/roles-permissions">Roles and Permissions</a></li>
+              <li><a class="dropdown-item" href="/dashboard/departments">Departments</a></li>
+              <li><a class="dropdown-item" href="/dashboard/positions">Positions</a></li>
+            </ul>
+          </li>
+          <% } %>
       </ul>
       <form class="d-flex" role="search">
         <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
