--- a/views/roleAndPermissionViews/permissionViews/deletePermissionView.ejs
+++ b/views/roleAndPermissionViews/permissionViews/deletePermissionView.ejs
@@ -1,19 +1,21 @@
 <% layout('./roleAndPermissionViews/roleAndPermissionLayout') %>
-<div class="container-fluid">
-    <div class="row">
-        <div class="border border-secondary col-md-4 ms-2 mt-4 p-2">
-            <h2>Delete a Permission</h2>
-            <form action="/permissions?_method=DELETE" method="post">
-                <select class="form-select" aria-label="Current permission" name="uuid">
-                    <option selected>Select Permission to Delete</option>
-                    <% permissions.forEach(element => { %>
-                        <option value="<%= element.uuid %>"><%= element.permissionName %></option>
-                    <% }) %>
-                  </select>
-                <div class="form-group mt-3">
-                    <button class="btn btn-secondary btn-sm" type="submit">Submit</button>
-                </div>
-            </form>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="border border-secondary col-md-4 ms-2 mt-4 p-2">
+                <h2>Delete a Permission</h2>
+                <form action="/permissions?_method=DELETE" method="post">
+                    <select class="form-select" aria-label="Current permission" name="uuid">
+                        <option selected>Select Permission to Delete</option>
+                        <% permissions.forEach(element=> { %>
+                            <option value="<%= element.uuid %>">
+                                <%= element.permissionName %>
+                            </option>
+                            <% }) %>
+                    </select>
+                    <div class="form-group mt-3">
+                        <button class="btn btn-secondary btn-sm" type="submit">Submit</button>
+                    </div>
+                </form>
+            </div>
         </div>
     </div>
-</div>
