--- a/views/roleAndPermissionViews/permissionViews/updatePermissionView.ejs
+++ b/views/roleAndPermissionViews/permissionViews/updatePermissionView.ejs
@@ -1,29 +1,32 @@
-
 <% layout('./roleAndPermissionViews/roleAndPermissionLayout') %>
-<div class="container-fluid">
-    <div class="row">
-        <div class="border border-secondary col-md-4 ms-2 mt-4 p-2">
-            <h2>Update a Permission</h2>
-            <form action="/permissions?_method=PUT" method="post">
-                <select class="form-select" aria-label="Current roles" onChange='document.getElementById("permission_name").value = getSelectedOption(this)' name="uuid">
-                    <option selected>Select Permission to Update</option>
-                    <% permissions.forEach(element => { %>
-                        <option value="<%= element.uuid %>"><%= element.permissionName %></option>
-                    <% }) %>
-                  </select>
-                <div class="form-group mt-3">
-                    <label for="permission_name">Updated value: </label>
-                    <input type="text" name="permissionName" id="permission_name">
-                </div>
-                <div class="form-group mt-3">
-                    <button class="btn btn-secondary btn-sm" type="submit">Submit</button>
-                </div>
-            </form>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="border border-secondary col-md-4 ms-2 mt-4 p-2">
+                <h2>Update a Permission</h2>
+                <form action="/permissions?_method=PUT" method="post">
+                    <select class="form-select" aria-label="Current roles"
+                        onChange='document.getElementById("permission_name").value = getSelectedOption(this)'
+                        name="uuid">
+                        <option selected>Select Permission to Update</option>
+                        <% permissions.forEach(element=> { %>
+                            <option value="<%= element.uuid %>">
+                                <%= element.permissionName %>
+                            </option>
+                            <% }) %>
+                    </select>
+                    <div class="form-group mt-3">
+                        <label for="permission_name">Updated value: </label>
+                        <input type="text" name="permissionName" id="permission_name">
+                    </div>
+                    <div class="form-group mt-3">
+                        <button class="btn btn-secondary btn-sm" type="submit">Submit</button>
+                    </div>
+                </form>
+            </div>
         </div>
     </div>
-</div>
-<script>
-    function getSelectedOption(sel) {
-        return sel.options[sel.selectedIndex].text;
-    }   
-</script>
+    <script>
+        function getSelectedOption(sel) {
+            return sel.options[sel.selectedIndex].text;
+        }   
+    </script>
