--- a/views/roleAndPermissionViews/rolePermissionViews/viewRolePermissionView.ejs
+++ b/views/roleAndPermissionViews/rolePermissionViews/viewRolePermissionView.ejs
@@ -1,15 +1,17 @@
 <% layout('./roleAndPermissionViews/roleAndPermissionLayout') %>
-<div class="container-fluid">
-    <div class="row">
-        <div class="border border-secondary col-md-4 ms-2 mt-4 p-2">
-            <h2>View Permission Granted to Role</h2>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="border border-secondary col-md-4 ms-2 mt-4 p-2">
+                <h2>View Permission Granted to Role</h2>
                 <div class="form-group mt-3">
                     <label for="role_name">Role</label>
                     <select class="form-select" aria-label="Current roles" name="roleUuid" id="role_name">
                         <option selected>Select Role</option>
-                        <% roles.forEach(element => { %>
-                            <option value="<%= element.uuid %>"><%= element.roleName %></option>
-                        <% }) %>
+                        <% roles.forEach(element=> { %>
+                            <option value="<%= element.uuid %>">
+                                <%= element.roleName %>
+                            </option>
+                            <% }) %>
                     </select>
                 </div>
                 <table class="table" id="permTable">
@@ -17,9 +19,9 @@
                         <th scope="col">Permissions</th>
                     </tr>
                 </table>
+            </div>
         </div>
     </div>
-</div>
 
-<script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-<script src="/js/script2.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <script src="/js/script2.js"></script>
