show page for positions

--- a/views/employeeViews/createEmployeeForm.ejs
+++ b/views/employeeViews/createEmployeeForm.ejs
@@ -41,7 +41,7 @@
                     <div class="col-md-6">
                         <label for="position" class="form-label mt-md-1">Position</label>
                         <select class="form-select" aria-label="Default select example" name="positionId" id="position">
-                            <option selected>Select Department</option>
+                            <option selected>Select Position</option>
                             <% positions.forEach(element=> { %>
                                 <option value="<%= element.positionId %>">
                                     <%= element.positionName %>
