--- a/views/dashboardViews/positionDashboard.ejs
+++ b/views/dashboardViews/positionDashboard.ejs
@@ -12,6 +12,9 @@
                 <div>
                     <a href="/positions/delete-position">Delete a Position</a>
                 </div>
+                <div>
+                    <a href="/positions/show-positions">View All Positions</a>
+                </div>
             </div>
         </div>
     </div>
