--- a/views/positionViews/updatePositionView.ejs
+++ b/views/positionViews/updatePositionView.ejs
@@ -18,7 +18,7 @@
                         <input type="text" name="positionName" id="positionName">
                     </div>
                     <div class="form-group mt-3">
-                        <button class="btn btn-secondary btn-sm" type="submit">submit</button>
+                        <button class="btn btn-secondary btn-sm" type="submit">Submit</button>
                     </div>
                 </form>
             </div>
