Permission Refactoring Done

--- a/views/dashboardViews/rolesPermissionDashboard.ejs
+++ b/views/dashboardViews/rolesPermissionDashboard.ejs
@@ -36,6 +36,9 @@
                 <div>
                     <a href="/permissions/delete-permission">Delete Permission</a>
                 </div>
+                <div>
+                    <a href="/permissions/show-permissions">Show all Permissions</a>
+                </div>
             </div>
         </div>
     </div>
