--- a/views/roleAndPermissionViews/permissionViews/updatePermissionView.ejs
+++ b/views/roleAndPermissionViews/permissionViews/updatePermissionView.ejs
@@ -3,7 +3,7 @@
         <div class="row">
             <div class="border border-secondary col-md-4 ms-2 mt-4 p-2">
                 <h2>Update a Permission</h2>
-                <form action="/permissions?_method=PUT" method="post">
+                <form action="/permissions?_method=PATCH" method="post" id="mainForm">
                     <select class="form-select" aria-label="Current roles"
                         onChange='document.getElementById("permission_name").value = getSelectedOption(this)'
                         name="uuid">
@@ -30,3 +30,4 @@
             return sel.options[sel.selectedIndex].text;
         }   
     </script>
+    <script src="/js/script3.js"></script>
