Role Refactoring done

--- a/views/dashboardViews/rolesPermissionDashboard.ejs
+++ b/views/dashboardViews/rolesPermissionDashboard.ejs
@@ -24,6 +24,9 @@
                 <div>
                     <a href="/roles/delete-role">Delete Role</a>
                 </div>
+                <div>
+                    <a href="/roles/show-roles">Show all Roles</a>
+                </div>
             </div>
             <div class="border border-secondary col-sm-4 p-2">
                 <h3>Permissions</h3>
