--- a/views/roleAndPermissionViews/roleViews/deleteRoleView.ejs
+++ b/views/roleAndPermissionViews/roleViews/deleteRoleView.ejs
@@ -3,7 +3,7 @@
         <div class="row">
             <div class="border border-secondary col-md-4 ms-2 mt-4 p-2">
                 <h2>Delete a Role</h2>
-                <form action="/roles?_method=DELETE" method="post">
+                <form action="/roles?_method=DELETE" method="post" id="mainForm">
                     <select class="form-select" aria-label="Current roles" name="uuid">
                         <option selected>Select Role to Delete</option>
                         <% roles.forEach(element=> { %>
@@ -19,3 +19,4 @@
             </div>
         </div>
     </div>
+    <script src="/js/script3.js"></script>
