--- a/views/roleAndPermissionViews/roleViews/updateRoleView.ejs
+++ b/views/roleAndPermissionViews/roleViews/updateRoleView.ejs
@@ -3,7 +3,7 @@
         <div class="row">
             <div class="border border-secondary col-md-4 ms-2 mt-4 p-2">
                 <h2>Update a Role</h2>
-                <form action="/roles?_method=PUT" method="post" id="mainForm">
+                <form action="/roles?_method=PATCH" method="post" id="mainForm">
                     <select class="form-select" aria-label="Current roles"
                         onChange='document.getElementById("roleName").value = getSelectedOption(this)' name="uuid">
                         <option selected>Select Role to Update</option>
